Prevent IE from clipping card counts

--- a/app/assets/stylesheets/_common-ui/cards/_card_badges.sass
+++ b/app/assets/stylesheets/_common-ui/cards/_card_badges.sass
@@ -10,6 +10,8 @@
   left: 10px
   top: 15px
   z-index: 5
+  // Stop clipping in IE
+  height: 30px
 
   &:before
     +font-size(35)
